Added more basic markdown for the layout of my first post

--- a/_posts/2019-02-03-week01.md
+++ b/_posts/2019-02-03-week01.md
@@ -4,8 +4,6 @@ title: Week 1
 ---
 
 
-# Week01 Post
-
 ### What I Think Open Source Is
 When I hear Open Source, I think of mainly cooperation and collaboration.  After watching the Kevin Fleming video not just because I was assigned to do so but also since I did not know what Open Source was (code is not the only resource freely available), those two terms stood out.  When one sees some code for example that one wants to use but thinks there can be improvements, one can reach out to the code _beneficiary_.  I say this since someone was perhaps willing to share code for the world to use for its purposes.  Collaboration is what I think Open Source should be at its core, in my opinion, since one doesn't merely email saying one wants improvements, but volunteers to help contribute ways of doing so.  
 
@@ -16,10 +14,10 @@ Some potential problems with open source are that once code is publicly licensed
 As sad as it sounds, I decided to register for a class about open source software development because I was lacking motivation to make projects on my own.  This class will force me to contribute to some project and maybe make my own code that is not "Hello World."
 
 ### Projects
-1. Linux - Linux is an Open Source operating system and is based on the Linux kernel, which is an operating system kernel released by Linus Torvalds. I use it currently as my primary OS via Ubuntu because I did not like Windows and thought I'd be forced to teach myself the command line because I had no motivation.  Sadly, I have yet to learn it well.  Alternatives include proprietary operating systems like Windows (as mentioned above) and OSX, but I heard Linux was good to use as a programmer and I did not like virtual machines and whatnot.
+1. *_Linux_* - Linux is an Open Source operating system and is based on the Linux kernel, which is an operating system kernel released by Linus Torvalds. I use it currently as my primary OS via Ubuntu because I did not like Windows and thought I'd be forced to teach myself the command line because I had no motivation.  Sadly, I have yet to learn it well.  Alternatives include proprietary operating systems like Windows (as mentioned above) and OSX, but I heard Linux was good to use as a programmer and I did not like virtual machines and whatnot.
 
-2. Python - Python is a dynamic and strong general programming language that was designed by Guido van Rossum.  It is open source and was my first programming language in college.  I have yet to use it in anything major such as my own projects or potential interests in data science, machine learning, backend web development, etc.  I want to use it more so than relearn Java and do stuff because Python allows me to do many things since I do not have specific interests and is very concise.  Alternatives include implementations of Java etc.
+2. *_Python_* - Python is a dynamic and strong general programming language that was designed by Guido van Rossum.  It is open source and was my first programming language in college.  I have yet to use it in anything major such as my own projects or potential interests in data science, machine learning, backend web development, etc.  I want to use it more so than relearn Java and do stuff because Python allows me to do many things since I do not have specific interests and is very concise.  Alternatives include implementations of Java etc.
 
-3. Wikipedia - Wikipedia is an open source encyclopedia on the web that has made those ancient encyclopedias back in the day much obsolete.  I use it occasionally to get a gist of a topic, and have tried to make edits to no avail.  However, because of the trauma I've received as a student in my younger years, I use Wikipedia with a grain of salt since teachers used to tell me all the time it is not a good resource.  As a CS student, however, Wikipedia is a good recapper. Alternatives include Google Scholar.
+3. *_Wikipedia_* - Wikipedia is an open source encyclopedia on the web that has made those ancient encyclopedias back in the day much obsolete.  I use it occasionally to get a gist of a topic, and have tried to make edits to no avail.  However, because of the trauma I've received as a student in my younger years, I use Wikipedia with a grain of salt since teachers used to tell me all the time it is not a good resource.  As a CS student, however, Wikipedia is a good recapper. Alternatives include Google Scholar.
 
-4. MongoDB - MongoDB is an open source document database for modern apps.  It is a noSQL database, making use of documents rather than tables found in relational databases.  I used it this past semester in Mr. Versoza's Applied Internet Technology class and it was the first database that I learned the basics of (It is pretty sad isn't it as I am currently a senior in college?).  Alternatives include a relational database known as PostgresSQL, often simply Postgres, which is also open source.
+4. *_MongoDB_* - MongoDB is an open source document database for modern apps.  It is a noSQL database, making use of documents rather than tables found in relational databases.  I used it this past semester in Mr. Versoza's Applied Internet Technology class and it was the first database that I learned the basics of (It is pretty sad isn't it as I am currently a senior in college?).  Alternatives include a relational database known as PostgresSQL, often simply Postgres, which is also open source.
