Careers in Open Source Update

--- a/_posts/2019-05-08-week13.md
+++ b/_posts/2019-05-08-week13.md
@@ -8,5 +8,4 @@ freedom in modifying the code or simply redistributing it the way it is.  The ri
 
 What I found kind of unexpected that is not uniquely associated to open source was when a person from the audience was told to 
 stop talking further about his idea of certifications and how beneficial they are to one's development and prospects.  He was 
-told to stop for it was not directly related to open source and it was not "his talk."  Hm.  Maybe I do not go to many events and
-that has to change, but it was my first time seeing someone get shut down from participating.
+told to stop for it was not directly related to open source and it was not "his talk."  Hm.  Maybe I do not go to many events and that has to change, but it was my first time seeing someone get shut down from participating.
